<resources>
    <string name="app_name">Заметки</string>
    <string name="enter_pin">Введите пин:</string>
    <string name="button_one">1</string>
    <string name="button_two">2</string>
    <string name="button_three">3</string>
    <string name="button_for">4</string>
    <string name="button_five">5</string>
    <string name="button_six">6</string>
    <string name="button_seven">7</string>
    <string name="button_eight">8</string>
    <string name="button_nine">9</string>
    <string name="button_zero">0</string>
    <string name="button_backspace">&#8592;</string>
    <string name="error_pin">Неверный пин-код!\nПопробуйте ещё.</string>
    <string name="invalid_input">Некорректный ввод</string>
    <string name="new_pin">Новый пин-код:</string>
    <string name="new_note">Новая заметка</string>
    <string name="save">Сохранить</string>
    <string name="correct_pin">Верный пин-код</string>
    <string name="change_pin">Изменить пин-код</string>
    <string name="title_of_note">Заголовок заметки</string>
    <string name="body_of_note">Тело заметки\n\n\n</string>
    <string name="deadline">Крайний срок</string>
    <string name="there_is_a_deadline">Есть крайний срок</string>
    <string name="settings">Настройки</string>
    <string name="new_pin_saved">Новый пин-код сохранен</string>
    <string name="old_pin_saved">Действует старый пин-код</string>
    <string name="empty_notes">Список заметок пуст</string>
    <string name="del_note">Удалена заметка: </string>
</resources>